--- a/src/assets.qrc
+++ b/src/assets.qrc
@@ -103,6 +103,7 @@
     <file>assets/images/trezor_white.png</file>
     <file>assets/images/trezor_unpaired.png</file>
     <file>assets/images/trezor_unpaired_white.png</file>
+    <file>assets/images/sign.png</file>
     <file>assets/images/unconfirmed.png</file>
     <file>assets/images/unlock.svg</file>
     <file>assets/images/unpaid.png</file>
