--- a/src/wizard/PageWalletRestoreKeys.ui
+++ b/src/wizard/PageWalletRestoreKeys.ui
@@ -216,6 +216,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="btn_scanUR">
+       <property name="text">
+        <string>Scan UR</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
