--- a/src/dialog/ViewOnlyDialog.ui
+++ b/src/dialog/ViewOnlyDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>659</width>
-    <height>254</height>
+    <height>260</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,13 +15,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QGroupBox" name="groupBox_6">
+    <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
-      <string>Restore height</string>
+      <string>Secret view key</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_6">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
-       <widget class="QLabel" name="label_restoreHeight">
+       <widget class="QLabel" name="label_secretViewKey">
         <property name="text">
          <string>TextLabel</string>
         </property>
@@ -53,13 +53,13 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox_2">
+    <widget class="QGroupBox" name="groupBox_6">
      <property name="title">
-      <string>Secret view key</string>
+      <string>Restore height</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <layout class="QHBoxLayout" name="horizontalLayout_6">
       <item>
-       <widget class="QLabel" name="label_secretViewKey">
+       <widget class="QLabel" name="label_restoreHeight">
         <property name="text">
          <string>TextLabel</string>
         </property>
@@ -84,6 +84,13 @@
       <widget class="QPushButton" name="btn_Save">
        <property name="text">
         <string>Create view-only wallet</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_transmitOverUR">
+       <property name="text">
+        <string>Transmit over UR</string>
        </property>
       </widget>
      </item>
