view-only: confirm password

--- a/src/wizard/PageSetPassword.ui
+++ b/src/wizard/PageSetPassword.ui
@@ -41,32 +41,7 @@
     </spacer>
    </item>
    <item>
-    <widget class="QLabel" name="label_4">
-     <property name="text">
-      <string>Password:</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLineEdit" name="line_password">
-     <property name="echoMode">
-      <enum>QLineEdit::Password</enum>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLabel" name="label_5">
-     <property name="text">
-      <string>Confirm Password:</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLineEdit" name="line_confirmPassword">
-     <property name="echoMode">
-      <enum>QLineEdit::Password</enum>
-     </property>
-    </widget>
+    <widget class="PasswordSetWidget" name="widget_password" native="true"/>
    </item>
   </layout>
  </widget>
@@ -75,6 +50,12 @@
    <class>InfoFrame</class>
    <extends>QFrame</extends>
    <header>components.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>PasswordSetWidget</class>
+   <extends>QWidget</extends>
+   <header>widgets/PasswordSetWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
