build: fix -DWITH_SCANNER=Off

--- a/src/wizard/offline_tx_signing/PageOTS_Export.ui
+++ b/src/wizard/offline_tx_signing/PageOTS_Export.ui
@@ -114,7 +114,7 @@
   <customwidget>
    <class>URWidget</class>
    <extends>QWidget</extends>
-   <header>widgets/URWidget.h</header>
+   <header>qrcode/scanner/URWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
