--- a/src/SendWidget.ui
+++ b/src/SendWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>647</width>
-    <height>231</height>
+    <height>254</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -173,6 +173,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QCheckBox" name="check_subtractFeeFromAmount">
+       <property name="text">
+        <string>Subtract fee from amount</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -187,7 +194,14 @@
      </item>
     </layout>
    </item>
-   <item row="4" column="1">
+   <item row="4" column="0">
+    <widget class="QLabel" name="label_feeTarget">
+     <property name="text">
+      <string>Fee</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <property name="spacing">
       <number>6</number>
@@ -227,6 +241,35 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="4" column="1">
+    <widget class="QComboBox" name="combo_feePriority">
+     <item>
+      <property name="text">
+       <string>Automatic</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Low</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Normal</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>High</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Highest</string>
+      </property>
+     </item>
+    </widget>
    </item>
   </layout>
  </widget>
