--- a/src/utils/updater/UpdateDialog.ui
+++ b/src/utils/updater/UpdateDialog.ui
@@ -79,12 +79,18 @@
           <property name="text">
            <string>Cancel</string>
           </property>
+          <property name="autoDefault">
+           <bool>false</bool>
+          </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="btn_download">
           <property name="text">
            <string>Download</string>
+          </property>
+          <property name="default">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -93,12 +99,18 @@
           <property name="text">
            <string>Install Update</string>
           </property>
+          <property name="default">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="btn_restart">
           <property name="text">
            <string>Restart Feather</string>
+          </property>
+          <property name="default">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
