--- a/src/dialog/AboutDialog.ui
+++ b/src/dialog/AboutDialog.ui
@@ -100,7 +100,7 @@
        <item row="4" column="0">
         <widget class="QLabel" name="label_5">
          <property name="text">
-          <string>Reddit:</string>
+          <string>Lemmy:</string>
          </property>
         </widget>
        </item>
@@ -158,7 +158,7 @@
        <item row="4" column="1">
         <widget class="QLabel" name="label_12">
          <property name="text">
-          <string>/r/FeatherWallet</string>
+          <string>monero.town/c/featherwallet</string>
          </property>
          <property name="textInteractionFlags">
           <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
