Plugin Config outline work

--- a/src/assets.qrc
+++ b/src/assets.qrc
@@ -40,6 +40,7 @@
     <file>assets/images/file.png</file>
     <file>assets/images/file_manager_32px.png</file>
     <file>assets/images/gnome-calc.png</file>
+    <file>assets/images/atomic-icon.png</file>
     <file>assets/images/hd_32px.png</file>
     <file>assets/images/history.png</file>
     <file>assets/images/i2p.png</file>
