Atomic Swap UI to show progress of swap started Bump to swap tool v 0.13.1
** Fix to kill swap process & monero-wallet-rpc process on shutdown

--- a/src/plugins/atomic/AtomicWidget.ui
+++ b/src/plugins/atomic/AtomicWidget.ui
@@ -29,7 +29,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="change_address"/>
+        <widget class="QLineEdit" name="change_address">
+         <property name="text">
+          <string>bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
@@ -43,7 +47,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="xmr_address"/>
+        <widget class="QLineEdit" name="xmr_address">
+         <property name="text">
+          <string>888tNkZrPN6JsEgekjMnABU4TBzc2Dt29EPAvkRxbANsAnjyPbb3iQ1YBRk1UXcdRsiKc9dhwMVgN5S9cQUiyoogDavup3H</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
